# dgp.cnqp_lib

./: .flake8  .gitignore  README.md  demo.py  pyproject.toml  requirements-dev.txt  setup.py
.agent/: config.md  instructions.md
.agent/workflows/: agile-standards.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
docs/: README.md  backlog.md  index.md
docs/1 - projeto/: PM1.0-sow.md  PM1.1-mission_statement.md  PM1.10-Project_closure_report.md  PM1.2-1.8-project_plan.md  PM1.3-release_plan.md  PM1.9-status_report_0.md  PM1.9-status_report_1.md
docs/2 - implementacao/SI1-2 - identification/: SI1-Requisitos.md  SI2-Analise.md
docs/2 - implementacao/SI3 - inception/diagramas/: SI.3-design.md
docs/2 - implementacao/SI3 - initiation/: SI.3-product_backlog_initiation.md
docs/2 - implementacao/SI4-6 - construction-sprints/: SI.3-product_backlog_sprints.md  sprint_backlog_x.md
scripts/: bump_version.py  sync_backlog.py
src/dgp_cnpq_lib/: __init__.py  __main__.py  core.py  crawler.py  decorators.py  extractors.py  logger.py
tests/: conftest.py  test_crawler.py  test_extractors.py  test_resilience.py
