[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dgp_cnpq_lib"
version = "0.1.0"
description = "Biblioteca Python para extração de dados do Espelho de Grupos de Pesquisa do CNPq"
authors = [{ name = "PaulosJunior", email = "paulossjunior@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["cnpq", "web-scraping", "research-data", "playwright"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = ["playwright>=1.40.0", "tenacity>=8.2.0", "loguru>=0.7.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "black>=23.0.0", "flake8>=6.0.0", "isort>=5.12.0"]

[project.urls]
Homepage = "https://github.com/ifesserra-lab/dgp.cnqp_lib"
Repository = "https://github.com/ifesserra-lab/dgp.cnqp_lib"
Issues = "https://github.com/ifesserra-lab/dgp.cnqp_lib/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/dgp_cnpq_lib"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503", "W293"]
exclude = [".git", "__pycache__", "build", "dist", ".venv"]
